RESOLVED FIXED183383
webkitfullscreenchange event not fired at the same time as :-webkit-full-screen pseudo selector changes; causes glitchiness
https://bugs.webkit.org/show_bug.cgi?id=183383
Summary webkitfullscreenchange event not fired at the same time as :-webkit-full-scre...
Jer Noble
Reported 2018-03-06 13:39:57 PST
webkitfullscreenchange event not fired at the same time as :-webkit-full-screen pseudo selector changes; causes glitchiness
Attachments
Patch (7.82 KB, patch)
2018-03-06 13:46 PST, Jer Noble
no flags
Archive of layout-test-results from ews104 for mac-sierra-wk2 (2.99 MB, application/zip)
2018-03-06 15:07 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews100 for mac-sierra (2.49 MB, application/zip)
2018-03-06 15:08 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews112 for mac-sierra (3.42 MB, application/zip)
2018-03-06 15:17 PST, EWS Watchlist
no flags
Patch (17.32 KB, patch)
2018-03-08 17:56 PST, Jer Noble
no flags
Archive of layout-test-results from ews103 for mac-sierra (2.32 MB, application/zip)
2018-03-08 19:16 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews116 for mac-sierra (2.95 MB, application/zip)
2018-03-08 19:41 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews121 for ios-simulator-wk2 (2.20 MB, application/zip)
2018-03-08 19:42 PST, EWS Watchlist
no flags
Patch (16.01 KB, patch)
2018-03-08 22:20 PST, Jer Noble
no flags
Archive of layout-test-results from ews113 for mac-sierra (2.93 MB, application/zip)
2018-03-08 23:59 PST, EWS Watchlist
no flags
Patch (16.14 KB, patch)
2018-03-09 00:04 PST, Jer Noble
no flags
Follow-up patch (3.05 KB, patch)
2018-03-09 13:46 PST, Jer Noble
no flags
Jer Noble
Comment 1 2018-03-06 13:46:13 PST
EWS Watchlist
Comment 2 2018-03-06 15:07:45 PST Comment hidden (obsolete)
EWS Watchlist
Comment 3 2018-03-06 15:07:46 PST Comment hidden (obsolete)
Radar WebKit Bug Importer
Comment 4 2018-03-06 15:08:08 PST
EWS Watchlist
Comment 5 2018-03-06 15:08:38 PST Comment hidden (obsolete)
EWS Watchlist
Comment 6 2018-03-06 15:08:39 PST Comment hidden (obsolete)
EWS Watchlist
Comment 7 2018-03-06 15:17:50 PST Comment hidden (obsolete)
EWS Watchlist
Comment 8 2018-03-06 15:17:52 PST Comment hidden (obsolete)
Jer Noble
Comment 9 2018-03-08 17:56:41 PST
EWS Watchlist
Comment 10 2018-03-08 19:16:37 PST
Comment on attachment 335377 [details] Patch Attachment 335377 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/6868193 New failing tests: media/media-fullscreen-return-to-inline.html media/media-fullscreen-pause-inline.html
EWS Watchlist
Comment 11 2018-03-08 19:16:39 PST
Created attachment 335384 [details] Archive of layout-test-results from ews103 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 12 2018-03-08 19:41:12 PST
Comment on attachment 335377 [details] Patch Attachment 335377 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/6868321 New failing tests: media/media-fullscreen-return-to-inline.html media/media-fullscreen-pause-inline.html media/modern-media-controls/media-controller/media-controller-inline-to-fullscreen-to-pip-to-inline.html
EWS Watchlist
Comment 13 2018-03-08 19:41:13 PST
Created attachment 335385 [details] Archive of layout-test-results from ews116 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 14 2018-03-08 19:42:53 PST
Comment on attachment 335377 [details] Patch Attachment 335377 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/6868323 New failing tests: media/media-fullscreen-pause-inline.html
EWS Watchlist
Comment 15 2018-03-08 19:42:54 PST
Created attachment 335386 [details] Archive of layout-test-results from ews121 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews121 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.6
Jer Noble
Comment 16 2018-03-08 22:20:43 PST
EWS Watchlist
Comment 17 2018-03-08 23:59:40 PST
Comment on attachment 335393 [details] Patch Attachment 335393 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/6871492 New failing tests: media/modern-media-controls/media-controller/media-controller-inline-to-fullscreen-to-pip-to-inline.html
EWS Watchlist
Comment 18 2018-03-08 23:59:41 PST
Created attachment 335403 [details] Archive of layout-test-results from ews113 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews113 Port: mac-sierra Platform: Mac OS X 10.12.6
Jer Noble
Comment 19 2018-03-09 00:04:20 PST
Eric Carlson
Comment 20 2018-03-09 09:27:31 PST
Comment on attachment 335405 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=335405&action=review > Source/WebCore/ChangeLog:20 > + A number of layout tests depend on the behavior that the element will be in fullscreen when the 'playing' event > + fires. This was true for DRT (but not WKTR), since its fullscreen implementations were deliberately synchronous, but > + won't necessarily be true for all ports. Fix this in a subsequent patch. You should note webkit.org/b/183490 here.
WebKit Commit Bot
Comment 21 2018-03-09 10:21:17 PST
Comment on attachment 335405 [details] Patch Clearing flags on attachment: 335405 Committed r229466: <https://trac.webkit.org/changeset/229466>
WebKit Commit Bot
Comment 22 2018-03-09 10:21:18 PST
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 23 2018-03-09 11:42:51 PST
This change caused API test Fullscreen.TopContentInset to time out: https://build.webkit.org/builders/Apple%20High%20Sierra%20Release%20WK1%20%28Tests%29/builds/3882
Jer Noble
Comment 24 2018-03-09 12:04:37 PST
(In reply to Ryan Haddad from comment #23) > This change caused API test Fullscreen.TopContentInset to time out: > https://build.webkit.org/builders/ > Apple%20High%20Sierra%20Release%20WK1%20%28Tests%29/builds/3882 I'll look into this.
Jer Noble
Comment 25 2018-03-09 13:46:40 PST
Reopening to attach new patch.
Jer Noble
Comment 26 2018-03-09 13:46:41 PST
Created attachment 335456 [details] Follow-up patch
WebKit Commit Bot
Comment 27 2018-03-09 15:10:09 PST
Comment on attachment 335456 [details] Follow-up patch Clearing flags on attachment: 335456 Committed r229487: <https://trac.webkit.org/changeset/229487>
WebKit Commit Bot
Comment 28 2018-03-09 15:10:11 PST
All reviewed patches have been landed. Closing bug.
Michael Catanzaro
Comment 29 2018-03-13 13:38:46 PDT
Regression: bug #183611
Note You need to log in before you can comment on or make changes to this bug.